10152018 commits initial setup

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/mjbenefiel/liri-node-app#readme",
   "dependencies": {
+    "bandsintown": "^1.0.1",
     "dotenv": "^6.1.0",
+    "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "node-spotify-api": "^1.0.7",
+    "omdb": "^0.8.0",
     "request": "^2.88.0"
   }
 }
