--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mjbenefiel/liri-node-app#readme",
   "dependencies": {
     "bandsintown": "^1.0.1",
+    "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
