--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bandsintown": "^1.0.1",
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
+    "figlet": "^1.2.1",
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "node-spotify-api": "^1.0.7",
